--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,66 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "target": "es2019",
-    "removeComments": true,
-    "sourceMap": true,
-    "watch": false,
-    "baseUrl": "./src",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "module": "esnext",
+    "target": "es6",
+    "jsx": "preserve",
+    "rootDir": "./",
+    "outDir": "build",
+    "allowSyntheticDefaultImports": true,
     "noImplicitAny": false,
-    "skipLibCheck": true,
-    "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitUseStrict": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "rootDir": "./src",
-    "paths": {
-      "*": [
-        "node_modules/*",
-        "src/types/*"
-      ]
-    }
+    "noImplicitReturns": false,
+    "strictFunctionTypes": false,
+    "pretty": true,
+    "removeComments": true,
+    "sourceMap": false,
+    "inlineSourceMap": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
+    "noEmitHelpers": true,
+    "skipLibCheck": true,
+    "preserveConstEnums": true,
+    "allowJs": false,
+    "strict": false,           // 禁用严格模式
+    "declaration": false,
+    "emitDecoratorMetadata": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "moduleResolution": "node",
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./src",
+    "lib": [
+      "dom",
+      "es2016",
+      "es2017.object"
+    ],
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "strictNullChecks": false
   },
+  "filesGlob": [
+    "types/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ],
+  "exclude": [
+    "config",
+    "build",
+    "dist",
+    "node_modules",
+    "__tests__"
+  ],
+  "types": [
+    "node",
+    "webpack",
+    "react",
+    "react-dom"
+  ],
+  "compileOnSave": false,
   "include": [
-    "src/**/*"
+    "src"
   ]
 }
