--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "target": "es6",
+    "module": "esnext",  // 保持esnext以支持模块化的最新特性
+    "target": "esnext",  // 使用esnext来支持模板字符串类型等新特性
     "jsx": "preserve",
     "rootDir": "./",
     "outDir": "build",
@@ -18,10 +18,10 @@
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "noEmitHelpers": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true,  // 跳过库文件类型检查，减少编译时间
     "preserveConstEnums": true,
     "allowJs": false,
-    "strict": false,           // 禁用严格模式
+    "strict": false,  // 如果需要严格模式，设置为 true
     "declaration": false,
     "emitDecoratorMetadata": true,
     "noUnusedLocals": false,
@@ -35,7 +35,7 @@
       "es2016",
       "es2017.object"
     ],
-    "esModuleInterop": true,
+    "esModuleInterop": true,  // 确保可以与 CommonJS 模块进行互操作
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
