--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,25 +7,25 @@ version: "3"
 services:
   # frontend
   dolores:
-    image: rapteam/rap2-dolores:latest
+    image: rap2-web
     ports:
       #冒号前可以自定义前端端口号，冒号后不要动
-      - 3000:38081
+      - 3008:38081
 
   # backend
   delos:
-    image: rapteam/rap2-delos:latest
+    image: rap2-back
     ports:
       # 这里的配置不要改哦
       - 38080:38080
     environment:
       - SERVE_PORT=38080
       # if you have your own mysql, config it here, and disable the 'mysql' config blow
-      - MYSQL_URL=mysql # links will maintain /etc/hosts, just use 'container_name'
+      - MYSQL_URL=132.145.95.110 # links will maintain /etc/hosts, just use 'container_name'
       - MYSQL_PORT=3306
-      - MYSQL_USERNAME=root
-      - MYSQL_PASSWD=
-      - MYSQL_SCHEMA=rap2
+      - MYSQL_USERNAME=rap
+      - MYSQL_PASSWD=Cxk@5438
+      - MYSQL_SCHEMA=rap
 
       # redis config
       - REDIS_URL=redis
@@ -42,24 +42,6 @@ services:
     # command: node dispatch.js
     depends_on:
       - redis
-      - mysql
 
   redis:
     image: redis:4
-
-  # disable this if you have your own mysql
-  mysql:
-    image: mysql:5.7
-    # expose 33306 to client (navicat)
-    #ports:
-    #   - 33306:3306
-    volumes:
-      # change './docker/mysql/volume' to your own path
-      # WARNING: without this line, your data will be lost.
-      - "./docker/mysql/volume:/var/lib/mysql"
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --init-connect='SET NAMES utf8mb4;' --innodb-flush-log-at-trx-commit=0
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "true"
-      MYSQL_DATABASE: "rap2"
-      MYSQL_USER: "root"
-      MYSQL_PASSWORD: ""
