--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,65 +1,32 @@
 {
   "compilerOptions": {
-    "module": "esnext", 
-    "target": "esnext", 
-    "jsx": "preserve",
-    "rootDir": "./",
-    "outDir": "build",  // 确保输出目录设置为 build
-    "allowSyntheticDefaultImports": true,
-    "noImplicitAny": false,
-    "noImplicitThis": true,
-    "noImplicitReturns": false,
-    "strictFunctionTypes": false,
-    "pretty": true,
-    "removeComments": true,
-    "sourceMap": false,
-    "inlineSourceMap": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "importHelpers": true,
-    "noEmitHelpers": true,
-    "skipLibCheck": true,
-    "preserveConstEnums": true,
-    "allowJs": false,
-    "strict": false,
-    "declaration": false,
-    "emitDecoratorMetadata": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "outDir": "./dist",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "noEmitOnError": true, 
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "target": "es2019",
+    "removeComments": true,
+    "sourceMap": true,
+    "watch": false,
     "baseUrl": "./src",
-    "lib": [
-      "dom",
-      "es2016",
-      "es2017.object"
-    ],
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": false,  // 将 noEmit 设置为 false 以生成文件
-    "strictNullChecks": false
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitAny": false,
+    "skipLibCheck": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitUseStrict": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "rootDir": "./src",
+    "paths": {
+      "*": [
+        "node_modules/*",
+        "src/types/*"
+      ]
+    }
   },
-  "filesGlob": [
-    "types/*.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
-  "exclude": [
-    "config",
-    "build",
-    "dist",
-    "node_modules",
-    "__tests__"
-  ],
-  "types": [
-    "node",
-    "webpack",
-    "react",
-    "react-dom"
-  ],
-  "compileOnSave": false,
   "include": [
-    "src"
+    "src/**/*"
   ]
 }
